--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.html
@@ -4,7 +4,7 @@
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item"><button class="btn btn-primary" 
         [routerLink]="['/members/', user.id]"><i Class="fa fa-user"></i></button></li>
-      <li class="list-inline-item"><button class="btn btn-primary"><i Class="fa fa-heart"></i></button></li>
+      <li class="list-inline-item"><button class="btn btn-primary" (click)="sendLike(user.id)"><i Class="fa fa-heart"></i></button></li>
       <li class="list-inline-item"><button class="btn btn-primary"><i Class="fa fa-envelope"></i></button></li>
     </ul>
   </div>
