--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.html
@@ -5,7 +5,8 @@
       <li class="list-inline-item"><button class="btn btn-primary" 
         [routerLink]="['/members/', user.id]"><i Class="fa fa-user"></i></button></li>
       <li class="list-inline-item"><button class="btn btn-primary" (click)="sendLike(user.id)"><i Class="fa fa-heart"></i></button></li>
-      <li class="list-inline-item"><button class="btn btn-primary"><i Class="fa fa-envelope"></i></button></li>
+      <li class="list-inline-item"><button class="btn btn-primary" 
+        [routerLink]="['/members/', user.id]" [queryParams]="{tab: 3}"><i Class="fa fa-envelope"></i></button></li>
     </ul>
   </div>
   <div class="card-body p-1">
